--- a/misc/header.tex
+++ b/misc/header.tex
@@ -10,6 +10,8 @@
 \pagestyle{fancy}
 \setlength{\headsep}{0.35in}
 
+\DeclareMathOperator{\argmax}{argmax} % no space, limits on side in displays
+
 \PassOptionsToPackage{colorlinks = true,
     linkcolor = blue,
     urlcolor  = blue,
