added threads, probably working basic algorithm

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,13 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import scipy.io as sio\n",
     "import numpy as np\n",
-    "import sys"
+    "import sys\n",
+    "import threading"
    ]
   },
   {
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,15 +205,11 @@
     "        if label not in self.compressed_labels:\n",
     "            self.compressed_labels[label] = str(self.compressed_index)\n",
     "            self.compressed_index += 1\n",
-    "#         print(label)\n",
-    "#         print(self.compressed_index)\n",
-    "#         print(self.compressed_labels[label])\n",
-    "#         print('\\n\\n')\n",
     "        return self.compressed_labels[label]\n",
     "    '''\n",
     "      A\n",
     "     / \\\n",
-    "    X-B-Y    come differenzio X e Y? maronn\n",
+    "    X-B-Y    come differenzio X e Y? me ne frego...\n",
     "     \\ /\n",
     "      C\n",
     "    '''\n",
@@ -254,25 +251,27 @@
     "                      }        \n",
     "        self.compressed_index = int(self.get_max_global_degree()[0]) \n",
     "        self.compressed_labels = {}\n",
-    "        self.run()\n",
-    "        \n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "        \n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "wl = WeisfeilerLehman(PPI_G_adj, 4)\n",
-    "wl.run()"
+    "wl_PPI = WeisfeilerLehman(PPI_G_adj, 4)\n",
+    "t1 = threading.Thread(name=\"PPI\", target=wl_PPI.run)\n",
+    "wl_SHOCK = WeisfeilerLehman(SHOCK_G_adj, 4)\n",
+    "t2 = threading.Thread(name=\"SHOCK\", target=wl_SHOCK.run)\n",
+    "threads = [t1, t2]\n",
+    "for t in threads:\n",
+    "    t.start()\n",
+    "for t in threads:\n",
+    "    t.join()\n",
+    "# print(wl_PPI.labels)\n",
+    "# print(wl_SHOCK.labels)\n",
+    "\n"
    ]
   }
  ],
