--- a/main.ipynb
+++ b/main.ipynb
@@ -11,14 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "import scipy.io as sio\n",
     "import numpy as np\n",
     "import sys\n",
-    "import threading"
+    "import threading\n",
+    "from copy import deepcopy\n",
+    "from collections import Counter"
    ]
   },
   {
@@ -88,11 +90,11 @@
     }
    ],
    "source": [
-    "x = [PPI_G_adj[0]]\n",
+    "# x = [PPI_G_adj[0]]\n",
     "# print(PPI_G_adj.shape[0])\n",
     "# print(len(PPI_G_adj))\n",
     "# print(np.ones((PPI_G_adj.shape[0],1)))\n",
-    "print(x)"
+    "# print(x)"
    ]
   },
   {
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +225,34 @@
     "        assert len(new_labels) == len(self.labels[g])\n",
     "        for i in range(len(new_labels)):\n",
     "            self.labels[g][i] = self.compress_label(new_labels[i])\n",
-    "            \n",
+    "    \n",
+    "    \n",
+    "    '''\n",
+    "    From graph to feature vector representation\n",
+    "    g --> index of the graph\n",
+    "    '''\n",
+    "    def graph_to_feature_vector(self, g):\n",
+    "        phi = []\n",
+    "        ol = list(map(int, self.original_labels[g]))\n",
+    "        c = Counter(ol)\n",
+    "        for k in range(max(ol)):\n",
+    "            if k in c:\n",
+    "                phi.append(c[k])\n",
+    "            else:\n",
+    "                phi.append(0)\n",
+    "        return phi\n",
+    "    \n",
+    "    \n",
+    "    '''\n",
+    "    Pairwise similarities between all the graphs (unnormalized)\n",
+    "    '''\n",
+    "    def pairwise_similarities(self):\n",
+    "        ps = {}\n",
+    "        for i in range(self.n):\n",
+    "            for j in range(self.n):\n",
+    "                print(np.dot(self.graph_to_feature_vector(i), self.graph_to_feature_vector(j)))\n",
+    "        print(ps)\n",
+    "        return ps\n",
     "    \n",
     "    '''\n",
     "    Run the whole algorithm: steps 1, 2, 3, 4\n",
@@ -241,14 +270,16 @@
     "    Initialize everything and run the algorithm h times\n",
     "    '''\n",
     "    def __init__(self, graphs, h):\n",
-    "        self.n_graphs = len(graphs)\n",
+    "        self.n = len(graphs)\n",
     "        self.graphs = graphs\n",
     "        self.h = h\n",
     "        self.labels = self.get_all_starting_labels()\n",
     "        self.labels = { \n",
     "                        index : [str(int(degree)) for degree in self.labels[index].ravel()] \n",
     "                                                  for index in self.labels \n",
-    "                      }        \n",
+    "                      }\n",
+    "        self.original_labels = deepcopy(self.labels)\n",
+    "        # print(self.original_labels[0])\n",
     "        self.compressed_index = int(self.get_max_global_degree()[0]) \n",
     "        self.compressed_labels = {}\n",
     "    \n"
@@ -256,9 +287,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2176\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (66,) and (24,) not aligned: 66 (dim 0) != 24 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-49-284782f04b8c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# print(wl_SHOCK.labels)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mwl_PPI\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpairwise_similarities\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-48-6e1b60fcd9d3>\u001b[0m in \u001b[0;36mpairwise_similarities\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    115\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph_to_feature_vector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph_to_feature_vector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    118\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: shapes (66,) and (24,) not aligned: 66 (dim 0) != 24 (dim 0)"
+     ]
+    }
+   ],
    "source": [
     "wl_PPI = WeisfeilerLehman(PPI_G_adj, 4)\n",
     "t1 = threading.Thread(name=\"PPI\", target=wl_PPI.run)\n",
@@ -271,7 +322,8 @@
     "    t.join()\n",
     "# print(wl_PPI.labels)\n",
     "# print(wl_SHOCK.labels)\n",
-    "\n"
+    "\n",
+    "wl_PPI.pairwise_similarities()"
    ]
   }
  ],
