working on pairwise similarities

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,29 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[array([[0, 1, 1, ..., 0, 0, 1],\n",
-      "       [1, 0, 0, ..., 0, 0, 0],\n",
-      "       [1, 0, 0, ..., 0, 0, 0],\n",
-      "       ...,\n",
-      "       [0, 0, 0, ..., 0, 0, 0],\n",
-      "       [0, 0, 0, ..., 0, 0, 0],\n",
-      "       [1, 0, 0, ..., 0, 0, 0]], dtype=uint8)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# x = [PPI_G_adj[0]]\n",
     "# print(PPI_G_adj.shape[0])\n",
     "# print(len(PPI_G_adj))\n",
     "# print(np.ones((PPI_G_adj.shape[0],1)))\n",
-    "# print(x)"
+    "# print(x)\n",
+    "# for i in PPI_G_adj:\n",
+    "#     print(len(i))"
    ]
   },
   {
@@ -130,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,23 +187,15 @@
     "        return new_labels    \n",
     "    \n",
     "    \n",
-    "    \n",
     "    '''\n",
     "    Compress a label if it has not been compressed already\n",
+    "    {long_label : compressed_index}\n",
     "    '''\n",
     "    def compress_label(self, label):\n",
     "        if label not in self.compressed_labels:\n",
     "            self.compressed_labels[label] = str(self.compressed_index)\n",
     "            self.compressed_index += 1\n",
     "        return self.compressed_labels[label]\n",
-    "    '''\n",
-    "      A\n",
-    "     / \\\n",
-    "    X-B-Y    come differenzio X e Y? me ne frego...\n",
-    "     \\ /\n",
-    "      C\n",
-    "    '''\n",
-    "    \n",
     "    \n",
     "    \n",
     "    '''\n",
@@ -228,14 +208,15 @@
     "    \n",
     "    \n",
     "    '''\n",
-    "    From graph to feature vector representation\n",
+    "    Count the original node labels: return a list with the number of occurrences per each label\n",
     "    g --> index of the graph\n",
+    "    [0, 1, 2, 3, 1] --> 0 nodes with label 0, 1 node with label 1, ..., 1 node with label 4\n",
     "    '''\n",
-    "    def graph_to_feature_vector(self, g):\n",
+    "    def count_original_node_labels(self, g):\n",
     "        phi = []\n",
     "        ol = list(map(int, self.original_labels[g]))\n",
     "        c = Counter(ol)\n",
-    "        for k in range(max(ol)):\n",
+    "        for k in range(max(ol)+1):\n",
     "            if k in c:\n",
     "                phi.append(c[k])\n",
     "            else:\n",
@@ -244,23 +225,81 @@
     "    \n",
     "    \n",
     "    '''\n",
+    "    Count node labels at current iteration: return a list with the number of occurrences per each label\n",
+    "    g --> index of the graph\n",
+    "    '''\n",
+    "    def count_node_labels_at_current_iteration(self, g):\n",
+    "        phi = []\n",
+    "        l = list(map(int, [i for _, i in self.compressed_labels.items()]))\n",
+    "        c = Counter(l)\n",
+    "        for k in range(max(l)+1):\n",
+    "            if k in c:\n",
+    "                phi.append(c[k])\n",
+    "            else:\n",
+    "                phi.append(0)\n",
+    "        return phi\n",
+    "    \n",
+    "    \n",
+    "    '''\n",
+    "    Prepare feature vectors for the dot product. Make the shorter ones as long as the long ones,\n",
+    "    concatenate, and so on.\n",
+    "    g1, g2 --> indices of two graphs\n",
+    "    '''\n",
+    "    def prepare_feature_vectors(self, g1, g2):\n",
+    "        l1 = self.count_labels[g1]\n",
+    "        l2 = self.count_labels[g2]\n",
+    "        tot1 = []\n",
+    "        tot2 = []\n",
+    "        for i in range(self.h+1):\n",
+    "            if len(l1[i]) > len(l2[i]):\n",
+    "                a1, a2 = np.array(l1[i]), np.zeros(len(l1[i]))\n",
+    "                for j in range(len(l2[i])):\n",
+    "                    a2[i] = l2[i][j]\n",
+    "            else:\n",
+    "                a1, a2 = np.zeros(len(l2[i])), np.array(l2[i])\n",
+    "                for j in range(len(l1[i])):\n",
+    "                    a1[i] = l1[i][j]\n",
+    "            tot1 = np.concatenate(tot1, a1)\n",
+    "            tot2 = np.concatenate(tot2, a2)\n",
+    "        return tot1, tot2\n",
+    "    \n",
+    "    \n",
+    "    '''\n",
+    "    Normalize similarity matrix: sum per rows must be = 1\n",
+    "    '''\n",
+    "    def normalize_sim_matrix(self):\n",
+    "        for i in self.pairwise_sim_matrix:\n",
+    "            s = i.sum()\n",
+    "            for j in range(len(i)):\n",
+    "                i[j] = i[j]/s\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    '''\n",
     "    Pairwise similarities between all the graphs (unnormalized)\n",
     "    '''\n",
     "    def pairwise_similarities(self):\n",
-    "        pass\n",
+    "        for i in range(self.n):\n",
+    "            for j in range(i, self.n):\n",
+    "                g1, g2 = self.prepare_feature_vectors(i, j)\n",
+    "                dotp = np.dot(g1, g2)\n",
+    "                self.pairwise_sim_matrix[i][j] = dotp\n",
+    "                self.pairwise_sim_matrix[j][i] = dotp\n",
+    "        self.normalize_sim_matrix()\n",
+    "        return self.pairwise_sim_matrix\n",
     "    \n",
     "    '''\n",
     "    Run the whole algorithm: steps 1, 2, 3, 4\n",
     "    '''\n",
     "    def run(self):\n",
     "        for i in range(self.h):\n",
-    "            for g in range(len(self.graphs)): # g is the index of the graph in the array of graphs\n",
+    "            for g in range(self.n): # g is the index of the graph in the array of graphs\n",
     "                new_labels = self.determine_labels(g)\n",
     "                new_labels = self.get_string_from_multiset(g, new_labels)\n",
     "                self.relabel(g, new_labels)\n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "                self.count_labels[g][i+1] = self.count_node_labels_at_current_iteration(g)\n",
+    "        return self.pairwise_similarities()\n",
+    "\n",
     "    '''\n",
     "    Initialize everything and run the algorithm h times\n",
     "    '''\n",
@@ -274,31 +313,61 @@
     "                                                  for index in self.labels \n",
     "                      }\n",
     "        self.original_labels = deepcopy(self.labels)\n",
-    "        # print(self.original_labels[0])\n",
-    "        self.compressed_index = int(self.get_max_global_degree()[0]) \n",
+    "        self.compressed_index = int(self.get_max_global_degree()[0]) + 1\n",
     "        self.compressed_labels = {}\n",
+    "        self.count_labels = {} # {iterazione1 : {grafo1 : conteggio1, grafo2 : conteggio2, ...}, ...}\n",
+    "        for i in range(self.n):\n",
+    "            self.count_labels[i] = {}\n",
+    "            self.count_labels[i][0] = self.count_original_node_labels(i)            \n",
+    "        del self.original_labels\n",
+    "        self.pairwise_sim_matrix = np.array((self.n, self.n))\n",
+    "        \n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Required argument 'object' (pos 1) not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-97-2aaaa5d6864a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mwl_PPI\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWeisfeilerLehman\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPPI_G_adj\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mwl_PPI\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-96-56923db19212>\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    175\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    176\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount_labels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount_node_labels_at_current_iteration\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 177\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpairwise_similarities\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    178\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    179\u001b[0m     '''\n",
+      "\u001b[0;32m<ipython-input-96-56923db19212>\u001b[0m in \u001b[0;36mpairwise_similarities\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    158\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    159\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 160\u001b[0;31m                 \u001b[0mg1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mg2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprepare_feature_vectors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    161\u001b[0m                 \u001b[0mdotp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mg2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    162\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpairwise_sim_matrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdotp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-96-56923db19212>\u001b[0m in \u001b[0;36mprepare_feature_vectors\u001b[0;34m(self, g1, g2)\u001b[0m\n\u001b[1;32m    125\u001b[0m         \u001b[0ml1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount_labels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mg1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    126\u001b[0m         \u001b[0ml2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount_labels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mg2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 127\u001b[0;31m         \u001b[0mtot1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    128\u001b[0m         \u001b[0mtot2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    129\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Required argument 'object' (pos 1) not found"
+     ]
+    }
+   ],
    "source": [
-    "wl_PPI = WeisfeilerLehman(PPI_G_adj, 4)\n",
-    "t1 = threading.Thread(name=\"PPI\", target=wl_PPI.run)\n",
-    "wl_SHOCK = WeisfeilerLehman(SHOCK_G_adj, 4)\n",
-    "t2 = threading.Thread(name=\"SHOCK\", target=wl_SHOCK.run)\n",
-    "threads = [t1, t2]\n",
-    "for t in threads:\n",
-    "    t.start()\n",
-    "for t in threads:\n",
-    "    t.join()\n",
+    "# x = [PPI_G_adj[84]]\n",
+    "# print(x)\n",
+    "# wl_PPI = WeisfeilerLehman(x, 2)\n",
+    "\n",
+    "wl_PPI = WeisfeilerLehman(PPI_G_adj,2)\n",
+    "\n",
+    "wl_PPI.run()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# t1 = threading.Thread(name=\"PPI\", target=wl_PPI.run)\n",
+    "# wl_SHOCK = WeisfeilerLehman(SHOCK_G_adj, 2)\n",
+    "# t2 = threading.Thread(name=\"SHOCK\", target=wl_SHOCK.run)\n",
+    "# threads = [t1, t2]\n",
+    "# for t in threads:\n",
+    "#     t.start()\n",
+    "# for t in threads:\n",
+    "#     t.join()\n",
     "# print(wl_PPI.labels)\n",
     "# print(wl_SHOCK.labels)\n",
-    "\n",
-    "wl_PPI.pairwise_similarities()"
+    "\n"
    ]
   }
  ],
