--- a/main.ipynb
+++ b/main.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -434,16 +434,16 @@
      "output_type": "stream",
      "text": [
       "DATASET: SHOCK\n",
-      "Minimum: 0.3\n",
-      "Mean: 0.36499999999999994\n",
-      "Max: 0.6\n",
-      "Standard deviation: 0.095\n",
+      "Minimum: 0.2\n",
+      "Mean: 0.32999999999999996\n",
+      "Max: 0.55\n",
+      "Standard deviation: 0.09797958971132713\n",
       "\n",
       "DATASET: PPI\n",
-      "Minimum: 0.5\n",
-      "Mean: 0.7069444444444445\n",
+      "Minimum: 0.5555555555555556\n",
+      "Mean: 0.7097222222222223\n",
       "Max: 0.8888888888888888\n",
-      "Standard deviation: 0.12537751634538893\n",
+      "Standard deviation: 0.10457328046711703\n",
       "\n"
      ]
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -474,16 +474,16 @@
      "output_type": "stream",
      "text": [
       "DATASET: SHOCK\n",
-      "Minimum: 0.1\n",
-      "Mean: 0.24500000000000002\n",
-      "Max: 0.5\n",
-      "Standard deviation: 0.12932517156377563\n",
+      "Minimum: 0.05\n",
+      "Mean: 0.255\n",
+      "Max: 0.4\n",
+      "Standard deviation: 0.10111874208078343\n",
       "\n",
       "DATASET: PPI\n",
       "Minimum: 0.5555555555555556\n",
-      "Mean: 0.7\n",
+      "Mean: 0.6986111111111111\n",
       "Max: 0.875\n",
-      "Standard deviation: 0.11044941862261691\n",
+      "Standard deviation: 0.10263691548245732\n",
       "\n"
      ]
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -515,16 +515,16 @@
      "output_type": "stream",
      "text": [
       "DATASET: SHOCK\n",
-      "Minimum: 0.1\n",
-      "Mean: 0.23000000000000004\n",
+      "Minimum: 0.0\n",
+      "Mean: 0.19999999999999998\n",
       "Max: 0.4\n",
-      "Standard deviation: 0.07810249675906655\n",
+      "Standard deviation: 0.10954451150103323\n",
       "\n",
       "DATASET: PPI\n",
       "Minimum: 0.5\n",
       "Mean: 0.6375\n",
       "Max: 0.7777777777777778\n",
-      "Standard deviation: 0.08594293613558322\n",
+      "Standard deviation: 0.0701216975631352\n",
       "\n"
      ]
     }
