codice finito, risultati nel report

--- a/main.ipynb
+++ b/main.ipynb
@@ -301,6 +301,7 @@
     "        self.normalize_sim_matrix()\n",
     "        return self.pairwise_sim_matrix\n",
     "    \n",
+    "    \n",
     "    '''\n",
     "    Run the whole algorithm: steps 1, 2, 3, 4\n",
     "    '''\n",
@@ -313,8 +314,9 @@
     "                self.count_labels[g][i+1] = self.count_node_labels_at_current_iteration(g)\n",
     "        return self.pairwise_similarities()\n",
     "\n",
+    "    \n",
     "    '''\n",
-    "    Initialize everything and run the algorithm h times\n",
+    "    Initialize everything\n",
     "    '''\n",
     "    def __init__(self, graphs, h):\n",
     "        self.n = len(graphs)\n",
@@ -408,10 +410,10 @@
     }
    ],
    "source": [
-    "pds = []\n",
+    "dms = []\n",
     "for i in range(len(similarity_matrices)):\n",
     "    pd = pairwise_distances(similarity_matrices[i], metric='euclidean')\n",
-    "    pds.append(pd)\n",
+    "    dms.append(pd)\n",
     "    plt.imshow(pd, cmap='Blues')\n",
     "    plt.colorbar()\n",
     "    plt.show()"
@@ -426,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -434,16 +436,16 @@
      "output_type": "stream",
      "text": [
       "DATASET: SHOCK\n",
-      "Minimum: 0.2\n",
-      "Mean: 0.32999999999999996\n",
-      "Max: 0.55\n",
-      "Standard deviation: 0.09797958971132713\n",
+      "Minimum: 0.1\n",
+      "Mean: 0.31999999999999995\n",
+      "Max: 0.5\n",
+      "Standard deviation: 0.1004987562112089\n",
       "\n",
       "DATASET: PPI\n",
-      "Minimum: 0.5555555555555556\n",
-      "Mean: 0.7097222222222223\n",
+      "Minimum: 0.5\n",
+      "Mean: 0.7055555555555555\n",
       "Max: 0.8888888888888888\n",
-      "Standard deviation: 0.10457328046711703\n",
+      "Standard deviation: 0.13114524037903194\n",
       "\n"
      ]
     }
@@ -451,8 +453,8 @@
    "source": [
     "kfold = StratifiedKFold(n_splits=10, shuffle=True) \n",
     "clf = svm.SVC(kernel=\"linear\")\n",
-    "for i in range(len(pds)):\n",
-    "    cv_score = cross_val_score(clf, pds[i], labels[i], cv = kfold)\n",
+    "for i in range(len(dms)):\n",
+    "    cv_score = cross_val_score(clf, dms[i], labels[i], cv = kfold)\n",
     "    print(f'DATASET: {dn[i]}\\nMinimum: {np.min(cv_score)}\\nMean: {np.mean(cv_score)}\\nMax: {np.max(cv_score)}')\n",
     "    print(f'Standard deviation: {np.std(cv_score)}\\n')"
    ]
@@ -466,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -474,16 +476,16 @@
      "output_type": "stream",
      "text": [
       "DATASET: SHOCK\n",
-      "Minimum: 0.05\n",
-      "Mean: 0.255\n",
+      "Minimum: 0.1\n",
+      "Mean: 0.28\n",
       "Max: 0.4\n",
-      "Standard deviation: 0.10111874208078343\n",
+      "Standard deviation: 0.08426149773176358\n",
       "\n",
       "DATASET: PPI\n",
-      "Minimum: 0.5555555555555556\n",
-      "Mean: 0.6986111111111111\n",
-      "Max: 0.875\n",
-      "Standard deviation: 0.10263691548245732\n",
+      "Minimum: 0.5\n",
+      "Mean: 0.7\n",
+      "Max: 1.0\n",
+      "Standard deviation: 0.12897985295826556\n",
       "\n"
      ]
     }
@@ -491,8 +493,8 @@
    "source": [
     "n_neigh = 15\n",
     "n_comp = 2\n",
-    "for i in range(len(pds)):\n",
-    "    p = manifold.Isomap(n_neigh, n_comp).fit_transform(pds[i])\n",
+    "for i in range(len(dms)):\n",
+    "    p = manifold.Isomap(n_neigh, n_comp).fit_transform(dms[i])\n",
     "    cv_score = cross_val_score(clf, p, labels[i], cv = kfold)\n",
     "    print(f'DATASET: {dn[i]}\\nMinimum: {np.min(cv_score)}\\nMean: {np.mean(cv_score)}\\nMax: {np.max(cv_score)}')\n",
     "    print(f'Standard deviation: {np.std(cv_score)}\\n')"
@@ -515,16 +517,16 @@
      "output_type": "stream",
      "text": [
       "DATASET: SHOCK\n",
-      "Minimum: 0.0\n",
-      "Mean: 0.19999999999999998\n",
-      "Max: 0.4\n",
-      "Standard deviation: 0.10954451150103323\n",
+      "Minimum: 0.1\n",
+      "Mean: 0.22000000000000003\n",
+      "Max: 0.35\n",
+      "Standard deviation: 0.07810249675906654\n",
       "\n",
       "DATASET: PPI\n",
       "Minimum: 0.5\n",
-      "Mean: 0.6375\n",
+      "Mean: 0.6597222222222222\n",
       "Max: 0.7777777777777778\n",
-      "Standard deviation: 0.0701216975631352\n",
+      "Standard deviation: 0.07562751883367769\n",
       "\n"
      ]
     }
@@ -532,8 +534,8 @@
    "source": [
     "n_neigh = 15\n",
     "n_comp = 2\n",
-    "for i in range(len(pds)):\n",
-    "    p = manifold.LocallyLinearEmbedding(n_neigh, n_comp).fit_transform(pds[i])\n",
+    "for i in range(len(dms)):\n",
+    "    p = manifold.LocallyLinearEmbedding(n_neigh, n_comp).fit_transform(dms[i])\n",
     "    cv_score = cross_val_score(clf, p, labels[i], cv = kfold)\n",
     "    print(f'DATASET: {dn[i]}\\nMinimum: {np.min(cv_score)}\\nMean: {np.mean(cv_score)}\\nMax: {np.max(cv_score)}')\n",
     "    print(f'Standard deviation: {np.std(cv_score)}\\n')"
