--- a/misc/header.tex
+++ b/misc/header.tex
@@ -19,6 +19,8 @@
     anchorcolor = blue}{hyperref}
 \frenchspacing
 
+\PassOptionsToPackage{hyphens}{url}\usepackage{hyperref}
+
 \lstset{language=python,
         breaklines=true,
         showstringspaces=false
