--- a/main.ipynb
+++ b/main.ipynb
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -436,16 +436,16 @@
      "output_type": "stream",
      "text": [
       "DATASET: SHOCK\n",
-      "Minimum: 0.1\n",
-      "Mean: 0.31999999999999995\n",
+      "Minimum: 0.2\n",
+      "Mean: 0.31500000000000006\n",
       "Max: 0.5\n",
-      "Standard deviation: 0.1004987562112089\n",
+      "Standard deviation: 0.10012492197250393\n",
       "\n",
       "DATASET: PPI\n",
       "Minimum: 0.5\n",
-      "Mean: 0.7055555555555555\n",
+      "Mean: 0.7069444444444444\n",
       "Max: 0.8888888888888888\n",
-      "Standard deviation: 0.13114524037903194\n",
+      "Standard deviation: 0.11222531623897646\n",
       "\n"
      ]
     }
@@ -468,43 +468,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DATASET: SHOCK\n",
-      "Minimum: 0.1\n",
-      "Mean: 0.28\n",
-      "Max: 0.4\n",
-      "Standard deviation: 0.08426149773176358\n",
-      "\n",
-      "DATASET: PPI\n",
-      "Minimum: 0.5\n",
-      "Mean: 0.7\n",
-      "Max: 1.0\n",
-      "Standard deviation: 0.12897985295826556\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "n_neigh = 15\n",
-    "n_comp = 2\n",
-    "for i in range(len(dms)):\n",
-    "    p = manifold.Isomap(n_neigh, n_comp).fit_transform(dms[i])\n",
-    "    cv_score = cross_val_score(clf, p, labels[i], cv = kfold)\n",
-    "    print(f'DATASET: {dn[i]}\\nMinimum: {np.min(cv_score)}\\nMean: {np.mean(cv_score)}\\nMax: {np.max(cv_score)}')\n",
-    "    print(f'Standard deviation: {np.std(cv_score)}\\n')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### SVMs with LLE manifold learning"
+    "results_isomap = {}\n",
+    "best = [0, 0]\n",
+    "worst = [1, 1] \n",
+    "\n",
+    "results_isomap[dn[0]] = {}\n",
+    "results_isomap[dn[1]] = {}\n",
+    "\n",
+    "\n",
+    "for n_neigh in range(2, 25):\n",
+    "    for n_comp in range(2, 10):\n",
+    "        for i in range(len(dn)):\n",
+    "            p = manifold.Isomap(n_neigh, n_comp).fit_transform(dms[i])\n",
+    "            cv_score = cross_val_score(clf, p, labels[i], cv = kfold)\n",
+    "            if np.mean(cv_score) > best[i]:\n",
+    "                results_isomap[dn[i]]['best'] = [{\n",
+    "                    'min' : np.min(cv_score),\n",
+    "                    'mean' : np.mean(cv_score),\n",
+    "                    'max' : np.max(cv_score),\n",
+    "                    'stddev' : np.std(cv_score)\n",
+    "                }, (n_neigh, n_comp)]\n",
+    "                best[i] = np.mean(cv_score)\n",
+    "            if np.mean(cv_score) < worst[i]:\n",
+    "                results_isomap[dn[i]]['worst'] = [{\n",
+    "                    'min' : np.min(cv_score),\n",
+    "                    'mean' : np.mean(cv_score),\n",
+    "                    'max' : np.max(cv_score),\n",
+    "                    'stddev' : np.std(cv_score)\n",
+    "                }, (n_neigh, n_comp)]\n",
+    "                worst[i] = np.mean(cv_score)"
    ]
   },
   {
@@ -516,29 +512,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DATASET: SHOCK\n",
-      "Minimum: 0.1\n",
-      "Mean: 0.22000000000000003\n",
-      "Max: 0.35\n",
-      "Standard deviation: 0.07810249675906654\n",
-      "\n",
-      "DATASET: PPI\n",
-      "Minimum: 0.5\n",
-      "Mean: 0.6597222222222222\n",
-      "Max: 0.7777777777777778\n",
-      "Standard deviation: 0.07562751883367769\n",
-      "\n"
+      "{'SHOCK': {'best': [{'min': 0.25, 'mean': 0.41, 'max': 0.6, 'stddev': 0.09433981132056604}, (10, 9)], 'worst': [{'min': 0.0, 'mean': 0.14, 'max': 0.2, 'stddev': 0.06244997998398398}, (2, 7)]}, 'PPI': {'best': [{'min': 0.5555555555555556, 'mean': 0.7944444444444445, 'max': 1.0, 'stddev': 0.11847148951186734}, (4, 7)], 'worst': [{'min': 0.375, 'mean': 0.5944444444444444, 'max': 0.875, 'stddev': 0.12892001539858103}, (2, 6)]}}\n"
      ]
     }
    ],
    "source": [
-    "n_neigh = 15\n",
-    "n_comp = 2\n",
-    "for i in range(len(dms)):\n",
-    "    p = manifold.LocallyLinearEmbedding(n_neigh, n_comp).fit_transform(dms[i])\n",
-    "    cv_score = cross_val_score(clf, p, labels[i], cv = kfold)\n",
-    "    print(f'DATASET: {dn[i]}\\nMinimum: {np.min(cv_score)}\\nMean: {np.mean(cv_score)}\\nMax: {np.max(cv_score)}')\n",
-    "    print(f'Standard deviation: {np.std(cv_score)}\\n')"
+    "print(results_isomap)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SVMs with LLE manifold learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_lle = {}\n",
+    "best = [0, 0]\n",
+    "worst = [1, 1] \n",
+    "\n",
+    "results_lle[dn[0]] = {}\n",
+    "results_lle[dn[1]] = {}\n",
+    "\n",
+    "\n",
+    "for n_neigh in range(2, 25):\n",
+    "    for n_comp in range(2, 10):\n",
+    "        for i in range(len(dn)):\n",
+    "            p = manifold.LocallyLinearEmbedding(n_neigh, n_comp).fit_transform(dms[i])\n",
+    "            cv_score = cross_val_score(clf, p, labels[i], cv = kfold)\n",
+    "            if np.mean(cv_score) > best[i]:\n",
+    "                results_lle[dn[i]]['best'] = [{\n",
+    "                    'min' : np.min(cv_score),\n",
+    "                    'mean' : np.mean(cv_score),\n",
+    "                    'max' : np.max(cv_score),\n",
+    "                    'stddev' : np.std(cv_score)\n",
+    "                }, (n_neigh, n_comp)]\n",
+    "                best[i] = np.mean(cv_score)\n",
+    "            if np.mean(cv_score) < worst[i]:\n",
+    "                results_lle[dn[i]]['worst'] = [{\n",
+    "                    'min' : np.min(cv_score),\n",
+    "                    'mean' : np.mean(cv_score),\n",
+    "                    'max' : np.max(cv_score),\n",
+    "                    'stddev' : np.std(cv_score)\n",
+    "                }, (n_neigh, n_comp)]\n",
+    "                worst[i] = np.mean(cv_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'SHOCK': {'best': [{'min': 0.2, 'mean': 0.40499999999999997, 'max': 0.8, 'stddev': 0.1738533865071371}, (20, 8)], 'worst': [{'min': 0.05, 'mean': 0.13500000000000004, 'max': 0.2, 'stddev': 0.05937171043518959}, (2, 2)]}, 'PPI': {'best': [{'min': 0.5555555555555556, 'mean': 0.7763888888888889, 'max': 1.0, 'stddev': 0.12210379363374868}, (6, 8)], 'worst': [{'min': 0.25, 'mean': 0.5305555555555556, 'max': 0.6666666666666666, 'stddev': 0.11002945733521309}, (2, 6)]}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(results_lle)"
    ]
   }
  ],
